@@ -1,9 +1,9 @@
-mod.version=4.6.1
+mod.version=4.6.2
 
 mc.version=1.7.10
 forge.version=10.13.3.1399-1.7.10
 
-mrtjp.version=1.0.7.14
+mrtjp.version=1.0.8.15
 ccl.version=1.1.3.136
 fmp.version=1.1.2.334
 
