@@ -71,6 +71,7 @@ tile.projectred.expansion.machine2|0.name=Block Breaker
 tile.projectred.expansion.machine2|1.name=Item Importer
 tile.projectred.expansion.machine2|2.name=Block Placer
 tile.projectred.expansion.machine2|3.name=Filtered Importer
+tile.projectred.expansion.machine2|4.name=Fire Starter
 
 
 itemGroup.transport=Project Red: Transportation
