@@ -25,9 +25,10 @@ import net.minecraft.item.Item.ToolMaterial
 import net.minecraft.item.ItemArmor.ArmorMaterial
 import net.minecraft.item._
 import net.minecraft.nbt.NBTTagCompound
-import net.minecraft.util.IIcon
+import net.minecraft.util.{EnumChatFormatting, IIcon}
 import net.minecraft.world.{IBlockAccess, World}
 import net.minecraftforge.common.EnumPlantType
+import org.lwjgl.input.Keyboard
 
 class ItemBackpack extends ItemCore("projectred.exploration.backpack")
 {
@@ -67,6 +68,14 @@ class ItemBackpack extends ItemCore("projectred.exploration.backpack")
     }
 
     override def getIconFromDamage(meta:Int) = icons(meta)
+
+    override def addInformation(stack:ItemStack, player:EntityPlayer, list:JList[_], flag:Boolean)
+    {
+        if (Keyboard.isKeyDown(Keyboard.KEY_LSHIFT) || Keyboard.isKeyDown(Keyboard.KEY_RSHIFT))
+            list.asInstanceOf[JList[String]].add(
+                EnumChatFormatting.GRAY.toString+(if (ItemBackpack.hasBagInv(stack))
+                    ItemBackpack.getNumberOfItems(stack) else 0)+"/27 slots used")
+    }
 }
 
 object ItemBackpack
@@ -75,6 +84,26 @@ object ItemBackpack
 
     def createContainer(player:EntityPlayer) =
         new ContainerBackpack(new BagInventory(player), player)
+
+    def hasBagInv(stack:ItemStack) =
+    {
+        stack.hasTagCompound && stack.getTagCompound.hasKey("baginv")
+    }
+
+    def getBagTag(stack:ItemStack) =
+    {
+        stack.getTagCompound.getCompoundTag("baginv")
+    }
+
+    def saveBagTag(stack:ItemStack, tag:NBTTagCompound)
+    {
+        stack.getTagCompound.setTag("baginv", tag)
+    }
+
+    def getNumberOfItems(stack:ItemStack) =
+    {
+        getBagTag(stack).getTagList("items", 10).tagCount()
+    }
 }
 
 class ContainerBackpack(inv:BagInventory, player:EntityPlayer) extends WidgetContainer
@@ -102,15 +131,15 @@ class BagInventory(player:EntityPlayer) extends TInventory
     private def loadInventory()
     {
         if (closeIfNoBag()) return
-        loadInv(player.getHeldItem.getTagCompound.getCompoundTag("baginv"))
+        loadInv(ItemBackpack.getBagTag(player.getHeldItem))
     }
 
     private def saveInventory()
     {
         if (closeIfNoBag()) return
-        val nbt = new NBTTagCompound
-        saveInv(nbt)
-        player.getHeldItem.getTagCompound.setTag("baginv", nbt)
+        val tag = new NBTTagCompound
+        saveInv(tag)
+        ItemBackpack.saveBagTag(player.getHeldItem, tag)
     }
 
     override def markDirty()
